--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
     "postcss-html": "^1.3.0",
     "postcss-jsx": "^0.36.4",
     "postcss-nesting": "^10.1.4",
