--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-n": "14.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "gh-pages": "^3.2.3",
+    "netlify-cli": "^10.3.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-html": "^1.3.0",
