--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-sweetalert2": "^5.0.5"
   }
 }
