agregado select custumizable

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
+    "vue-select": "^4.0.0-beta.3",
     "vue-sweetalert2": "^5.0.5"
   }
 }
