--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "rm -rf dist && vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "build": "vite build",
+    "preview": "vite preview --port 5050",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "devDependencies": {
     "@stylelint/postcss-css-in-js": "^0.37.2",
@@ -26,11 +26,16 @@
     "postcss-syntax": "^0.36.2",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "eslint-plugin-vue": "^8.2.0"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "firebase": "^9.6.11"
+    "firebase": "^9.6.11",
+    "pinia": "^2.0.13",
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.14"
   }
 }
