--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "gh-pages": "^3.2.3",
-    "netlify-cli": "^3.7.1",
+    "netlify-cli": "^2.37.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-html": "^1.3.0",
@@ -33,6 +33,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "emailjs": "^4.0.0",
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
