--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
+    "v-smooth-scroll": "^2.0.0-beta.2",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
+    "vue-scrollto": "^2.20.0",
     "vue-select": "^4.0.0-beta.3",
     "vue-sweetalert2": "^5.0.5"
   }
