--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@innologica/vue-dropdown-menu": "^0.1.4",
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
