--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[[redirects]]
-from = "/*"
-to = "https://app.adoptaunkompi.com"
-status = 301
-force = true
+# [[redirects]]
+# from = "/*"
+# to = "/"
+# status = 301
+# force = true
