--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
     "v-smooth-scroll": "^2.0.0-beta.2",
     "vue": "^3.2.33",
+    "vue-recaptcha": "^2.0.2",
     "vue-router": "^4.0.14",
     "vue-scrollto": "^2.20.0",
     "vue-select": "^4.0.0-beta.3",
