--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "sass": "^1.52.1",
+    "swiper": "^8.2.2",
     "v-smooth-scroll": "^2.0.0-beta.2",
     "vue": "^3.2.33",
     "vue-recaptcha": "^2.0.2",
